--- a/mst/mst_cpp/mst_cpp.vcxproj
+++ b/mst/mst_cpp/mst_cpp.vcxproj
@@ -145,16 +145,24 @@
   <ItemGroup>
     <ClInclude Include="include\cnn\blob.h" />
     <ClInclude Include="include\cnn\layer\convolution_layer.h" />
-    <ClInclude Include="include\cnn\layer\layer.h" />
+    <ClInclude Include="include\cnn\layer\base_layer.h" />
+    <ClInclude Include="include\cnn\layer_param\base_layer_param.h" />
+    <ClInclude Include="include\cnn\layer_param\convolution_layer_param.h" />
+    <ClInclude Include="include\cnn\layer_param\relu_layer_param.h" />
     <ClInclude Include="include\cnn\network.h" />
     <ClInclude Include="include\cnn\layer\relu_layer.h" />
+    <ClInclude Include="include\cnn\utility.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\cnn\blob.cpp" />
     <ClCompile Include="src\cnn\layer\convolution_layer.cpp" />
-    <ClCompile Include="src\cnn\layer\layer.cpp" />
+    <ClCompile Include="src\cnn\layer\base_layer.cpp" />
+    <ClCompile Include="src\cnn\layer_param\base_layer_param.cpp" />
+    <ClCompile Include="src\cnn\layer_param\convolution_layer_param.cpp" />
+    <ClCompile Include="src\cnn\layer_param\relu_layer_param.cpp" />
     <ClCompile Include="src\cnn\network.cpp" />
     <ClCompile Include="src\cnn\layer\relu_layer.cpp" />
+    <ClCompile Include="src\cnn\utility.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
