--- a/mst/mst_sample/mst_sample.vcxproj.filters
+++ b/mst/mst_sample/mst_sample.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="src\mst_sample.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="src\cnn\convolution_layer_sample.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\cnn\network_config_parse_sample.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\mst_sample.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
