--- a/mst/mst_sample/mst_sample.vcxproj
+++ b/mst/mst_sample/mst_sample.vcxproj
@@ -156,6 +156,7 @@
   <ItemGroup>
     <ClCompile Include="src\cnn\convolution_layer_sample.cpp" />
     <ClCompile Include="src\cnn\network_config_parse_sample.cpp" />
+    <ClCompile Include="src\file\csv_parser_sample.cpp" />
     <ClCompile Include="src\mst_sample.cpp" />
   </ItemGroup>
   <ItemGroup>
